--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Felix Gnass <fgnass@gmail.com>",
   "repository": "fgnass/decap-cms-widget-iconify",
   "license": "MIT",
-  "description": "",
+  "description": "Iconify Widget for Decap CMS",
   "devDependencies": {
     "decap-cms-core": "^3.6.1",
     "react": "^18.3.1",
