--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "ES2020",
     "lib": ["ES2020", "DOM"],
     "moduleResolution": "bundler",
+    "declaration": true,
     "strict": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
